# ChangeLog for app-portage/portage-utils
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/portage-utils/ChangeLog,v 1.44 2006/04/30 01:38:13 solar Exp $

*portage-utils-0.1.16 (29 Apr 2006)

  29 Apr 2006; <solar@gentoo.org> -portage-utils-0.1.13.ebuild,
  -portage-utils-0.1.14.ebuild, +portage-utils-0.1.16.ebuild:
  - Bugfix in qsize with files larger than 4GB. Added new -u/--update flag to
  qcheck for vdb entries. added -U/--umap flags to qlist to display use to iuse
  mappings of vdb entries. misc qglsa/qmerge/qxpak code cleanups

  24 Apr 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  portage-utils-0.1.15.ebuild:
  Stable on sparc

  23 Apr 2006; Michael Hanselmann <hansmi@gentoo.org>
  portage-utils-0.1.15.ebuild:
  Stable on ppc.

  22 Apr 2006; <solar@gentoo.org> portage-utils-0.1.15.ebuild:
  - stable on amd64 arm mips ppc64 x86

  16 Apr 2006; Bryan Østergaard <kloeri@gentoo.org
  portage-utils-0.1.15.ebuild:
  Stable on alpha.

  31 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>
  portage-utils-0.1.15.ebuild:
  Add ~x86-fbsd keyword.

*portage-utils-0.1.15 (26 Mar 2006)

  26 Mar 2006; <solar@gentoo.org> +portage-utils-0.1.15.ebuild:
  - Added support for color remapping via /etc/portage/color.map - Fixed up
  (hopefully) stderr handling on those OSes that suffer silly design - Added
  slot handling for qlist. - Added qlop verbose mode to display PV-PR - Reworked
  the glob handling a bit to not use glob64 by default. - Added -F flag to
  qmerge to use in place of the -f switch when wanting to skip downloading of
  the Packages cache - Added -F flag to quse for format handling of user defined
  variables

*portage-utils-0.1.14 (25 Feb 2006)

  25 Feb 2006; <solar@gentoo.org> -portage-utils-0.1.10.ebuild,
  -portage-utils-0.1.11.ebuild, -portage-utils-0.1.12.ebuild,
  +portage-utils-0.1.14.ebuild:
  - vdb_get_next_dir items handle virtuals that are dirs now. - Allow