@@ -1,34 +1,20 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST portage-utils-0.1.15.tar.bz2 57132 RMD160 c41aa8aa5ce5d36fd009a1533b4eb5e67b8a934f SHA256 94f228be8372d409deefe709e2d0ab49cf4143024084d5abee8c0f6da15c7d7e size 57132
-DIST portage-utils-0.1.16.tar.bz2 58921 size 58921
-EBUILD portage-utils-0.1.15.ebuild 714 RMD160 2de791d66f3475c1b6b8828209d05b443a19b62c SHA1 47bcb2e7a59fa1c8c4535d7bbcea4c011f81ac93 SHA256 a4b32454dec0bed3d72f283bdf7e13dd74e906aeababa4b135d00c7aa08f78c6 size 714
-MD5 44bea646c7eec7a2d090794f752e5753 portage-utils-0.1.15.ebuild 714
-RMD160 2de791d66f3475c1b6b8828209d05b443a19b62c portage-utils-0.1.15.ebuild 714
-SHA256 a4b32454dec0bed3d72f283bdf7e13dd74e906aeababa4b135d00c7aa08f78c6 portage-utils-0.1.15.ebuild 714
-EBUILD portage-utils-0.1.16.ebuild 679 RMD160 bfcd065f61c2e5a9d6b9afc57e8b22d430c16fd2 SHA1 3575c695435b7b6f10d35c55bc1436d68403b242 SHA256 5cdf5d2d1211ace73d741c3f647d7cd8cdf5ed61aa5df02c5afc026078964762 size 679
-MD5 dd973c166758e6297dc16888171d2d94 portage-utils-0.1.16.ebuild 679
-RMD160 bfcd065f61c2e5a9d6b9afc57e8b22d430c16fd2 portage-utils-0.1.16.ebuild 679
-SHA256 5cdf5d2d1211ace73d741c3f647d7cd8cdf5ed61aa5df02c5afc026078964762 portage-utils-0.1.16.ebuild 679
-MISC ChangeLog 9450 RMD160 d05037ac64ca626b58d75b74f700d526e73eb323 SHA1 457d19a03d9cfb3793bddb3341985d4909508624 SHA256 715f89b9b717ed7078d08ad1b9b9fb0435edce1648643a09dcdc141c1e8aa06b size 9450
-MD5 bc850f4ea19d4cf7196de35825d3117a ChangeLog 9450
-RMD160 d05037ac64ca626b58d75b74f700d526e73eb323 ChangeLog 9450
-SHA256 715f89b9b717ed7078d08ad1b9b9fb0435edce1648643a09dcdc141c1e8aa06b ChangeLog 9450
-MISC metadata.xml 281 RMD160 15e60807f6da5cfa6d15c44e7a1a1dd75b67400d SHA1 03af06e261462e5d0bc1ad6349e9d840fe9165b6 SHA256 5d1926670f5323ff9aefe20d10a36ac00f23a49bf13985c9a77baea4f3b4abbd size 281
-MD5 5a808b54f37942c1de1ff75edc43f69d metadata.xml 281
-RMD160 15e60807f6da5cfa6d15c44e7a1a1dd75b67400d metadata.xml 281
-SHA256 5d1926670f5323ff9aefe20d10a36ac00f23a49bf13985c9a77baea4f3b4abbd metadata.xml 281
+MD5 b1e53d0bdb0e85959d28c8279eab13a4 ChangeLog 9974
 MD5 c1884644ce45bbd0053fa0450906637a files/digest-portage-utils-0.1.15 262
-RMD160 ca940cafa819aca309fbcc84b5d8e264b96860f0 files/digest-portage-utils-0.1.15 262
-SHA256 fba286c808611d7a596c7d6250b79a2c668ccc2d1d42554ff390dfdb3d62bb50 files/digest-portage-utils-0.1.15 262
 MD5 bceb8979c5802dcfdd92ce05626af703 files/digest-portage-utils-0.1.16 72
-RMD160 04391979045b6b9ad0aae419027ea7de2fdcc027 files/digest-portage-utils-0.1.16 72
-SHA256 42759ff6feb37920d921e7406d8ebd2704e0d291d661b9385a84308b69ecac6f files/digest-portage-utils-0.1.16 72
+MD5 95d8fbb9e5074beb0ecb70bb89a4c78b files/digest-portage-utils-0.1.17 72
+MD5 5a808b54f37942c1de1ff75edc43f69d metadata.xml 281
+MD5 44bea646c7eec7a2d090794f752e5753 portage-utils-0.1.15.ebuild 714
+MD5 dd973c166758e6297dc16888171d2d94 portage-utils-0.1.16.ebuild 679
+MD5 c1cd6efe1f91521306c0ac2658f8f854 portage-utils-0.1.17.ebuild 679
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.3 (GNU/Linux)
+Version: GnuPG v1.4.2.2 (GNU/Linux)
 
-iD8DBQFEWBlJ2+ySkm8kpY0RAsBZAKC1t5n5isswNaXWWcarV3/UBKg0QgCePG9I
-kCTgLy9/RGEg1sLKP9uTXH8=
-=d1RP
+iQCVAwUBRGaLTp4WFLgrx1GWAQJ9qQP8Do+AifYzD6tGVZhrmZxlxT25TLVJFFs3
+GRGyjaegT+UTpNf34mkTnjT9vmiEame/MFZ4853xvnmauE+D3JEjSNwqlarC8e59
+bWg3Tj0TfFKo+XuJXKZ+wT5S5CmRFIDnQ5VpOXLASVqOoqqBwKlt8/F+ndyGXu2C
+0831d4FKAq4=
+=ZHAJ
 -----END PGP SIGNATURE-----
