@@ -1,6 +1,16 @@
 # ChangeLog for app-portage/portage-utils
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/portage-utils/ChangeLog,v 1.44 2006/04/30 01:38:13 solar Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/portage-utils/ChangeLog,v 1.45 2006/05/14 01:43:30 solar Exp $
+
+*portage-utils-0.1.17 (13 May 2006)
+
+  13 May 2006; <solar@gentoo.org> +portage-utils-0.1.17.ebuild:
+  - q: Updated stderr/stdout handling for BSD again. - qfile: do not abort when
+  user passes qfile "..." - qimlate: New applet (Thomas Cort <tcort@gentoo.org>)
+  uses portage metadata/cache directly. - qmerge: bug fix. dont remove vdb
+  entries in pretend mode. - qpkg: new switch -P/--pkgdir to allow user defined
+  pkgdirs. - quse: new switch. -N/--name-only used to only display matching
+  entries and not the values.
 
 *portage-utils-0.1.16 (29 Apr 2006)
 
